chore: update pipelines

--- a/tasks/gradle-build-task.yaml
+++ b/tasks/gradle-build-task.yaml
@@ -31,6 +31,7 @@ spec:
   steps:
     - name: build
       image: $(params.IMAGE)
+      imagePullPolicy: IfNotPresent
       workingDir: $(workspaces.source.path)
       command:
         - gradle
