--- a/tasks/jx-finish-release.yaml
+++ b/tasks/jx-finish-release.yaml
@@ -58,6 +58,9 @@ spec:
     - description: git repository owner (user or organisation)
       name: REPO_OWNER
       type: string
+    - name: SLACK_SECRET
+      default: slack
+      description: slack secret name
   stepTemplate:
     env:
       - name: BUILD_ID
@@ -110,3 +113,21 @@ spec:
         #!/usr/bin/env sh
         source /workspace/source/.jx/variables.sh
         jx promote -b --all-auto --timeout 1h --no-poll
+
+    - name: slack-notification
+      image: docker.io/curlimages/curl:7.68.0
+      imagePullPolicy: IfNotPresent
+      workingDir: $(workspaces.source.path)
+      script: |
+        #!/bin/bash
+        source /workspace/source/.jx/variables.sh
+        export MSG=$(echo "New Release: https://github.com/$REPO_OWNER/$REPO_NAME/releases/tag/v${VERSION}")
+        /usr/bin/curl -X POST -H 'Content-type: application/json' -H 'Authorization: Bearer '$SLACK_TOKEN --data '{"channel":"$SLACK_CHANEL", "text":"$MSG"}' https://slack.com/api/chat.postMessage
+      env:
+        - name: SLACK_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: $(params.SLACK_SECRET)
+              key: SLACK_TOKEN
+        - name: SLACK_CHANEL
+          value: sdlc-dev
