--- a/tasks/node-build-task.yaml
+++ b/tasks/node-build-task.yaml
@@ -22,6 +22,7 @@ spec:
   steps:
     - name: install
       image: $(params.IMAGE)
+      imagePullPolicy: IfNotPresent
       workingDir: $(workspaces.source.path)
       command:
         - npm
@@ -30,6 +31,7 @@ spec:
 
     - name: test
       image: $(params.IMAGE)
+      imagePullPolicy: IfNotPresent
       workingDir: $(workspaces.source.path)
       script: |
         export CI=true
@@ -38,6 +40,7 @@ spec:
 
     - name: build-prod
       image: $(params.IMAGE)
+      imagePullPolicy: IfNotPresent
       workingDir: $(workspaces.source.path)
       command:
         - npm
