--- a/tasks/secrets-scan.yaml
+++ b/tasks/secrets-scan.yaml
@@ -30,6 +30,7 @@ spec:
   steps:
     - name: scan-secrets
       image: zricethezav/gitleaks
+      imagePullPolicy: IfNotPresent
       workingDir: $(workspaces.source.path)
       script: |
         git fetch
