--- a/tasks/jx-finish-release.yaml
+++ b/tasks/jx-finish-release.yaml
@@ -92,42 +92,34 @@ spec:
   steps:
 
     - name: promote-changelog
-      image: gcr.io/jenkinsxio/builder-go:2.1.142-761
+      image: gcr.io/jenkinsxio/jx-changelog:0.0.8
       workingDir: $(workspaces.source.path)
       script: |
-        #!/bin/bash
+        #!/usr/bin/env sh
         source /workspace/source/.jx/variables.sh
-        jx step changelog --version v${VERSION}
+        if [ -d "/workspace/source/charts/$REPO_NAME" ]; then
+          sed -i -e "s/^version:.*/version: $VERSION/" ./charts/$REPO_NAME/Chart.yaml
+          sed -i -e "s/repository:.*/repository: $DOCKER_REGISTRY\/$DOCKER_REGISTRY_ORG\/$APP_NAME/" ./charts/$REPO_NAME/values.yaml
+          sed -i -e "s/tag:.*/tag: $VERSION/" ./charts/$REPO_NAME/values.yaml;
+        else
+          echo no charts;
+        fi
+        git commit -a -m "release $VERSION" --allow-empty
+        git tag -fa v$VERSION -m "Release version $VERSION"
+        git push origin v$VERSION
+        jx changelog create --version v${VERSION}
 
     - name: promote-helm-release
-      image: gcr.io/jenkinsxio/jx-cli:latest
+      image: gcr.io/jenkinsxio/jx-boot:3.0.755
       workingDir: $(workspaces.source.path)
       script: |
         #!/usr/bin/env sh
         jx gitops helm release
 
     - name: promote-jx-promote
-      image: gcr.io/jenkinsxio/jx-cli:latest
+      image: gcr.io/jenkinsxio/jx-promote:0.0.145
       workingDir: $(workspaces.source.path)
       script: |
         #!/usr/bin/env sh
         source /workspace/source/.jx/variables.sh
         jx promote -b --all-auto --timeout 1h --no-poll
-
-    - name: slack-notification
-      image: docker.io/curlimages/curl:7.68.0
-      imagePullPolicy: IfNotPresent
-      workingDir: $(workspaces.source.path)
-      script: |
-        #!/bin/bash
-        source /workspace/source/.jx/variables.sh
-        export MSG=$(echo "New Release: https://github.com/$REPO_OWNER/$REPO_NAME/releases/tag/v${VERSION}")
-        /usr/bin/curl -X POST -H 'Content-type: application/json' -H 'Authorization: Bearer '$SLACK_TOKEN --data '{"channel":"$SLACK_CHANEL", "text":"$MSG"}' https://slack.com/api/chat.postMessage
-      env:
-        - name: SLACK_TOKEN
-          valueFrom:
-            secretKeyRef:
-              name: $(params.SLACK_SECRET)
-              key: SLACK_TOKEN
-        - name: SLACK_CHANEL
-          value: sdlc-dev
