--- a/tasks/jx-setup-task.yaml
+++ b/tasks/jx-setup-task.yaml
@@ -178,29 +178,17 @@ spec:
             echo "Skipping version update [file]"
         fi
 
-    - name: tag-version
-      image: gcr.io/jenkinsxio/builder-go
-      workingDir: $(workspaces.source.path)
-      script: |
-        #!/usr/bin/env bash
-        if $(params.IS_RELEASE); then
-            jx step tag --version $(cat VERSION)
-          else
-            echo "Skipping version update [tag]"
-        fi
-
     - name: jx-variables
-      image: gcr.io/jenkinsxio/jx-cli:latest
+      image: gcr.io/jenkinsxio/jx-boot:3.0.755
       workingDir: $(workspaces.source.path)
       script: |
         #!/usr/bin/env sh
         jx gitops variables
 
     - name: jx-variables-results
-      image: gcr.io/jenkinsxio/jx-cli:latest
+      image: gcr.io/jenkinsxio/jx-boot:3.0.755
       script: |
         #!/usr/bin/env bash
         source $(workspaces.source.path)/.jx/variables.sh
         export OUTPUT_IMAGE=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION
-
         echo -n "$OUTPUT_IMAGE" > $(results.image.path)
