--- a/tasks/jx-finish-release.yaml
+++ b/tasks/jx-finish-release.yaml
@@ -96,6 +96,10 @@ spec:
       workingDir: $(workspaces.source.path)
       script: |
         #!/usr/bin/env sh
+        git config --global --add user.name ${GIT_AUTHOR_NAME:-jenkins-x-bot}
+        git config --global --add user.email ${GIT_AUTHOR_EMAIL:-jenkins-x@googlegroups.com}
+        git config --global credential.helper store
+
         source /workspace/source/.jx/variables.sh
         if [ -d "/workspace/source/charts/$REPO_NAME" ]; then
           sed -i -e "s/^version:.*/version: $VERSION/" ./charts/$REPO_NAME/Chart.yaml
@@ -110,14 +114,14 @@ spec:
         jx changelog create --version v${VERSION}
 
     - name: promote-helm-release
-      image: gcr.io/jenkinsxio/jx-boot:3.0.755
+      image: gcr.io/jenkinsxio/jx-cli:latest
       workingDir: $(workspaces.source.path)
       script: |
         #!/usr/bin/env sh
         jx gitops helm release
 
     - name: promote-jx-promote
-      image: gcr.io/jenkinsxio/jx-promote:0.0.145
+      image: gcr.io/jenkinsxio/jx-cli:latest
       workingDir: $(workspaces.source.path)
       script: |
         #!/usr/bin/env sh
