chore: add slack notification on release

--- a/tasks/jx-finish-release.yaml
+++ b/tasks/jx-finish-release.yaml
@@ -127,3 +127,100 @@ spec:
         #!/usr/bin/env sh
         source /workspace/source/.jx/variables.sh
         jx promote -b --all-auto --timeout 1h --no-poll
+
+    - name: slack-notify
+      image: gcr.io/jenkinsxio/jx-cli:latest
+      imagePullPolicy: IfNotPresent
+      script: |
+        #!/usr/bin/env bash
+        source /workspace/source/.jx/variables.sh
+
+        export DOCKER_IMAGE_URL="https://$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION"
+        export CHANGE_LOG_URL="https://github.com/$(params.REPO_OWNER)/$(params.REPO_NAME)/releases/tag/v${VERSION}"
+        export REPO_TAG_URL="https://github.com/$(params.REPO_OWNER)/$(params.REPO_NAME)/tree/v${VERSION}"
+
+        eval "cat <<EOF
+          $SLACK_MESSAGE_TMPL
+          EOF
+          " >rpl.json
+        export MESSAGE=$(cat rpl.json)
+        curl -X POST -H 'Content-type: application/json' -H "Authorization: Bearer $SLACK_TOKEN" --data "$MESSAGE" https://slack.com/api/chat.postMessage
+
+      env:
+        - name: SLACK_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: $(params.SLACK_SECRET)
+              key: SLACK_TOKEN
+        - name: SLACK_CHANEL
+          value: "#none"
+        - name: SLACK_MESSAGE_TMPL
+          value: |
+            {
+              "channel": "${SLACK_CHANEL}",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": ":tada: Application \`${APP_NAME}\` of version \`${VERSION}\` has been packed. \n Application will be *autopromoted* on *staging* environment _soon_."
+                  }
+                },
+                {
+                  "type": "actions",
+                  "elements": [
+                    {
+                      "type": "button",
+                      "text": {
+                        "type": "plain_text",
+                        "text": ":octocat: Repository Tag",
+                        "emoji": true
+                      },
+                      "value": "click_me_123",
+                      "url": "${REPO_TAG_URL}",
+                      "action_id": "repo"
+                    },
+                    {
+                      "type": "button",
+                      "text": {
+                        "type": "plain_text",
+                        "text": ":nyancat: Change Log",
+                        "emoji": true
+                      },
+                      "value": "click_me_123",
+                      "url": "${CHANGE_LOG_URL}",
+                      "action_id": "changelog"
+                    },
+                    {
+                      "type": "button",
+                      "text": {
+                        "type": "plain_text",
+                        "text": ":whale: Docker Image",
+                        "emoji": true
+                      },
+                      "value": "click_me_123",
+                      "url": "${DOCKER_IMAGE_URL}",
+                      "action_id": "dockerImage"
+                    }
+                  ]
+                },
+                {
+                  "type": "divider"
+                },
+                {
+                  "type": "context",
+                  "elements": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "<https://vitech-team.github.io/SDLC|VITech SDLC Team>"
+                    },
+                    {
+                      "type": "image",
+                      "image_url": "https://static2.clutch.co/s3fs-public/logos/cf05ec722c2e35d3158c03924a09dd2e.png",
+                      "alt_text": "VItech SDLC"
+                    }
+                  ]
+                }
+              ]
+            }
+
