--- a/tasks/jx-finish.yaml
+++ b/tasks/jx-finish.yaml
@@ -58,11 +58,9 @@ spec:
     - description: git repository owner (user or organisation)
       name: REPO_OWNER
       type: string
-  results:
-    - name: image
-      description: Name of the image which should be builded
-    - name: source_branch
-      description: name of the source branch
+    - name: SLACK_SECRET
+      default: slack
+      description: slack secret name
   stepTemplate:
     env:
       - name: BUILD_ID
@@ -93,10 +91,9 @@ spec:
         value: $(params.REPO_URL)
   steps:
     - name: promote-jx-preview
-      image: gcr.io/jenkinsxio/jx-preview:0.0.122
+      image: gcr.io/jenkinsxio/jx-cli:latest
       workingDir: $(workspaces.source.path)
       script: |
         #!/bin/bash
         source /workspace/source/.jx/variables.sh
         jx preview create
-
