--- a/tasks/jx-finish-release.yaml
+++ b/tasks/jx-finish-release.yaml
@@ -124,25 +124,28 @@ spec:
       image: gcr.io/jenkinsxio/jx-cli:latest
       workingDir: $(workspaces.source.path)
       script: |
-        #!/usr/bin/env sh
+        #!/usr/bin/env bash
         source /workspace/source/.jx/variables.sh
-        jx promote -b --all-auto --timeout 1h --no-poll
+        jx promote -b --all-auto --timeout 1h --no-poll &> promote.log
+        cat promote.log
 
     - name: slack-notify
       image: gcr.io/jenkinsxio/jx-cli:latest
       imagePullPolicy: IfNotPresent
+      workingDir: $(workspaces.source.path)
       script: |
         #!/usr/bin/env bash
         source /workspace/source/.jx/variables.sh
 
+        export PR_URL=$(cat promote.log | grep "Created Pull Request" | grep -Eo '(http|https).+')
+        export REPO_TAG_URL="https://github.com/$(params.REPO_OWNER)/$(params.REPO_NAME)/tree/v${VERSION}"
         export DOCKER_IMAGE_URL="https://$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION"
         export CHANGE_LOG_URL="https://github.com/$(params.REPO_OWNER)/$(params.REPO_NAME)/releases/tag/v${VERSION}"
-        export REPO_TAG_URL="https://github.com/$(params.REPO_OWNER)/$(params.REPO_NAME)/tree/v${VERSION}"
 
         eval "cat <<EOF
-          $SLACK_MESSAGE_TMPL
-          EOF
-          " >rpl.json
+        $SLACK_MESSAGE_TMPL
+        EOF
+        " >rpl.json
         export MESSAGE=$(cat rpl.json)
         curl -X POST -H 'Content-type: application/json' -H "Authorization: Bearer $SLACK_TOKEN" --data "$MESSAGE" https://slack.com/api/chat.postMessage
 
@@ -163,12 +166,23 @@ spec:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": ":tada: Application \`${APP_NAME}\` of version \`${VERSION}\` has been packed. \n Application will be *autopromoted* on *staging* environment _soon_."
+                    "text": ":tada: Application \`${APP_NAME}\` of version \`${VERSION}\` has been packed. \n Application will be *autopromoted* on *staging* environment _soon_, see created <${PR_URL}|pull request>."
                   }
                 },
                 {
                   "type": "actions",
                   "elements": [
+                    {
+                      "type": "button",
+                      "text": {
+                        "type": "plain_text",
+                        "text": ":nyancat: Promote PR",
+                        "emoji": true
+                      },
+                      "value": "click_me_123",
+                      "url": "${PR_URL}",
+                      "action_id": "pr"
+                    },
                     {
                       "type": "button",
                       "text": {
@@ -184,7 +198,7 @@ spec:
                       "type": "button",
                       "text": {
                         "type": "plain_text",
-                        "text": ":nyancat: Change Log",
+                        "text": ":potato: Change Log",
                         "emoji": true
                       },
                       "value": "click_me_123",
