--- a/tasks/secrets-scan.yaml
+++ b/tasks/secrets-scan.yaml
@@ -8,7 +8,7 @@ metadata:
     tekton.dev/displayName: "git leaks scanner"
 spec:
   description: >-
-    run gitleaks scan
+    run gitleaks scan.
     see https://github.com/zricethezav/gitleaks
   workspaces:
     - name: source
@@ -29,14 +29,14 @@ spec:
       description: scan status
   steps:
     - name: scan-secrets
-      image: zricethezav/gitleaks
+      image: zricethezav/gitleaks:v7.1.0
       imagePullPolicy: IfNotPresent
       workingDir: $(workspaces.source.path)
       script: |
         git fetch
         git log --left-right --cherry-pick --pretty=format:"%H" $(params.PULL_BASE_SHA)...$(params.LAST_SHA) > commit_list.txt
 
-        if gitleaks --repo-path="$(workspaces.source.path)" --redact --commits-file=commit_list.txt --config="$(params.CONFIG_FILE)" --report="$(results.report.json.path)"; then
+        if gitleaks --path="$(workspaces.source.path)" --redact --commits-file=commit_list.txt --config-path="$(params.CONFIG_FILE)" --report="$(results.report.json.path)"; then
             echo "no leaks found"
             echo "success" > $(results.status.path)
           else
@@ -44,7 +44,8 @@ spec:
         fi
 
     - name: print-report
-      image: zricethezav/gitleaks
+      image: zricethezav/gitleaks:v7.1.0
+      imagePullPolicy: IfNotPresent
       workingDir: $(workspaces.source.path)
       script: |
         if [[ "$(cat $(results.status.path))" == "failed" ]]; then
@@ -65,4 +66,3 @@ spec:
           fi
           exit 1
         fi
-
