--- a/tasks/secrets-scan.yaml
+++ b/tasks/secrets-scan.yaml
@@ -53,7 +53,7 @@ spec:
         fi
 
     - name: comment
-      image: gcr.io/jenkinsxio/jx-cli:latest
+      image: gcr.io/jenkinsxio/jx-cli:3.1.43
       workingDir: $(workspaces.source.path)
       script: |
         #!/usr/bin/env bash
