--- a/pipelines/large-tests-pr-pipeline.yaml
+++ b/pipelines/large-tests-pr-pipeline.yaml
@@ -19,10 +19,10 @@ spec:
       - mountPath: /large-test-reports
         name: large-test-reports
     workingDir: /workspace/source
-  results: []
+  results: [ ]
   steps:
     - name: get-pr-info
-      image: 'gcr.io/jenkinsxio/jx-cli:latest'
+      image: 'gcr.io/jenkinsxio/jx-cli:3.1.43'
       workingDir: /workspace/source
       script: |
         #!/usr/bin/env bash
@@ -35,7 +35,6 @@ spec:
             secretKeyRef:
               name: jx-pipeline-git-github-github
               key: password
-
     - name: save-promotion-label
       workingDir: /workspace/source
       image: python:latest
@@ -43,7 +42,6 @@ spec:
         pip install pyyaml
         python -m script.large_test_utils
         python -c 'from script.large_test_utils import update_promotion_label; update_promotion_label()'
-
     - name: check-promotion
       workingDir: /workspace/source
       image: python:latest
@@ -69,10 +67,9 @@ spec:
         else
           echo "Skipped because PR not making promotion to prod"
         fi
-
     - name: comment
       workingDir: /workspace/source
-      image: 'gcr.io/jenkinsxio/jx-cli:latest'
+      image: 'gcr.io/jenkinsxio/jx-cli:3.1.43'
       script: |
         if grep -w "production" .promotion_label; then
           if grep -w "True" .test_status; then
@@ -84,7 +81,6 @@ spec:
             exit 1
           fi
         fi
-
   volumes:
     - name: large-test-reports
       persistentVolumeClaim:
