--- a/tasks/conventional-commits-task.yaml
+++ b/tasks/conventional-commits-task.yaml
@@ -34,7 +34,6 @@ spec:
       description: report of commits
     - name: passed
       description: is passed
-
   steps:
     - name: conventional-commits-check
       image: aevea/commitsar:latest
@@ -46,7 +45,6 @@ spec:
           echo -n "false" > $(results.passed.path)
         fi
         cat $(results.report.path)
-
     - name: conventional-commits-prepare-report
       image: aevea/commitsar:latest
       workingDir: $(workspaces.source.path)
@@ -54,9 +52,8 @@ spec:
         echo "=== Building mardown"
         export COLUMNS=$(cat $(results.report.path) | grep "|" | awk -F"|" '{printf "%s | %s | %s", $2, $3, $4;} {print ""}' | grep -v -e '^[[:space:]]*$' | tail -n +2 | grep '[[:alnum:]]')
         echo -e "$(params.MARDOWN_HEADER) \n HASH | ERROR | MSG \n --|--|-- \n $COLUMNS" > $(results.mardown_report.path)
-
     - name: conventional-commits-comment
-      image: gcr.io/jenkinsxio/jx-cli:latest
+      image: gcr.io/jenkinsxio/jx-cli:3.1.43
       workingDir: $(workspaces.source.path)
       script: |
         if [ -z "$(params.PR_NUMBER)" ]; then
@@ -66,11 +63,10 @@ spec:
               jx gitops pr comment --pr="$(params.PR_NUMBER)" --comment="$(cat $(results.mardown_report.path))"
             fi
         fi
-
     - name: conventional-commits-final
-      image: gcr.io/jenkinsxio/jx-cli:latest
+      image: gcr.io/jenkinsxio/jx-cli:3.1.43
       workingDir: $(workspaces.source.path)
-      script: |
+      script: |-
         if "$(params.FAIL)" ; then
           if ! "$(cat $(results.passed.path))" ; then
             exit 1
