--- a/tasks/git-clone-task.yaml
+++ b/tasks/git-clone-task.yaml
@@ -10,14 +10,12 @@ metadata:
     tekton.dev/displayName: "git clone"
 spec:
   description: >-
-    These Tasks are Git tasks to work with repositories used by other tasks
-    in your Pipeline.
+    These Tasks are Git tasks to work with repositories used by other tasks in your
+    Pipeline.
 
-    The git-clone Task will clone a repo from the provided url into the
-    output Workspace. By default the repo will be cloned into the root of
-    your Workspace. You can clone into a subdirectory by setting this Task's
-    subdirectory param.
-
+    The git-clone Task will clone a repo from the provided url into the output Workspace.
+    By default the repo will be cloned into the root of your Workspace. You can clone
+    into a subdirectory by setting this Task's subdirectory param.
   workspaces:
     - name: output
       description: The git repo will be cloned onto the volume backing this workspace
