--- a/tasks/jx-finish-release.yaml
+++ b/tasks/jx-finish-release.yaml
@@ -90,7 +90,6 @@ spec:
       - name: REPO_URL
         value: $(params.REPO_URL)
   steps:
-
     - name: promote-changelog
       image: gcr.io/jenkinsxio/jx-changelog:0.0.8
       workingDir: $(workspaces.source.path)
@@ -112,25 +111,22 @@ spec:
         git tag -fa v$VERSION -m "Release version $VERSION"
         git push origin v$VERSION
         jx changelog create --version v${VERSION}
-
     - name: promote-helm-release
-      image: gcr.io/jenkinsxio/jx-cli:latest
+      image: gcr.io/jenkinsxio/jx-cli:3.1.43
       workingDir: $(workspaces.source.path)
       script: |
         #!/usr/bin/env sh
         jx gitops helm release
-
     - name: promote-jx-promote
-      image: gcr.io/jenkinsxio/jx-cli:latest
+      image: gcr.io/jenkinsxio/jx-cli:3.1.43
       workingDir: $(workspaces.source.path)
       script: |
         #!/usr/bin/env bash
         source /workspace/source/.jx/variables.sh
         jx promote -b --all-auto --timeout 1h --no-poll &> promote.log
         cat promote.log
-
     - name: slack-notify
-      image: gcr.io/jenkinsxio/jx-cli:latest
+      image: gcr.io/jenkinsxio/jx-cli:3.1.43
       imagePullPolicy: IfNotPresent
       workingDir: $(workspaces.source.path)
       script: |
@@ -148,7 +144,6 @@ spec:
         " >rpl.json
         export MESSAGE=$(cat rpl.json)
         curl -X POST -H 'Content-type: application/json' -H "Authorization: Bearer $SLACK_TOKEN" --data "$MESSAGE" https://slack.com/api/chat.postMessage
-
       env:
         - name: SLACK_TOKEN
           valueFrom:
@@ -237,4 +232,3 @@ spec:
                 }
               ]
             }
-
