--- a/tasks/jx-setup-task.yaml
+++ b/tasks/jx-setup-task.yaml
@@ -10,11 +10,9 @@ metadata:
     tekton.dev/displayName: "jx-setup"
 spec:
   description: >-
-    Configure git environment.
-    Perform it merge of latest changes
-    if IS_RELEASE is true: generate new version
-    generate as result next docker image name
-    extract source branch name based on PR number
+    Configure git environment. Perform it merge of latest changes if IS_RELEASE is
+    true: generate new version generate as result next docker image name extract source
+    branch name based on PR number
   workspaces:
     - name: source
       description: sources dir
@@ -106,10 +104,11 @@ spec:
         value: $(params.REPO_URL)
   steps:
     - name: git-configure
-      image: gcr.io/jenkinsxio/jx-cli:latest
+      image: gcr.io/jenkinsxio/jx-boot:3.1.43
       workingDir: $(workspaces.source.path)
       script: |
-        #!/usr/bin/env bash
+        #!/usr/bin/env sh
+
         echo "Dir: $(pwd)"
 
         git config --global --add user.name ${GIT_AUTHOR_NAME:-jenkins-x-bot}
@@ -120,18 +119,16 @@ spec:
 
         git checkout $(params.PULL_PULL_SHA)
         echo checked out revision: $(params.PULL_PULL_SHA) to dir: $(workspaces.source.path)
-
     - name: git-setup
-      image: gcr.io/jenkinsxio/jx-cli:latest
+      image: gcr.io/jenkinsxio/jx-boot:3.1.43
       workingDir: $(workspaces.source.path)
       script: |
         jx gitops git setup --namespace jx-git-operator
-
     - name: get-pr-info
-      image: gcr.io/jenkinsxio/jx-cli:latest
+      image: gcr.io/jenkinsxio/jx-boot:3.1.43
       workingDir: $(workspaces.source.path)
       script: |
-        #!/usr/bin/env bash
+        #!/usr/bin/env sh
         if [[ -n "${PULL_NUMBER}" ]]; then
           jx gitops pr get --git-token="$GIT_TOKEN" --pr="${PULL_NUMBER}" &> pr.yaml
         fi
@@ -141,17 +138,15 @@ spec:
             secretKeyRef:
               name: jx-pipeline-git-github-github
               key: password
-
     - name: save-source-branch
       workingDir: $(workspaces.source.path)
-      image: mikefarah/yq
+      image: mikefarah/yq:3.3.4
       script: |
         if [[ -n "${PULL_NUMBER}" ]]; then
           yq r pr.yaml Source > $(results.source_branch.path)
           rm pr.yaml
           echo "Soure branch is: $(cat $(results.source_branch.path))"
         fi
-
     - name: git-merge
       image: gcr.io/jenkinsxio/builder-jx:2.1.142-761
       workingDir: $(workspaces.source.path)
@@ -161,7 +156,6 @@ spec:
         else
           git checkout $(cat $(results.source_branch.path))
         fi
-
     - name: next-version
       image: gcr.io/jenkinsxio/builder-go
       workingDir: $(workspaces.source.path)
@@ -177,16 +171,14 @@ spec:
           else
             echo "Skipping version update [file]"
         fi
-
     - name: jx-variables
-      image: gcr.io/jenkinsxio/jx-cli:latest
+      image: gcr.io/jenkinsxio/jx-boot:3.1.43
       workingDir: $(workspaces.source.path)
       script: |
         #!/usr/bin/env sh
         jx gitops variables
-
     - name: jx-variables-results
-      image: gcr.io/jenkinsxio/jx-cli:latest
+      image: gcr.io/jenkinsxio/jx-cli:3.1.43
       script: |
         #!/usr/bin/env bash
         source $(workspaces.source.path)/.jx/variables.sh
