--- a/tasks/conventional-commits-task.yaml
+++ b/tasks/conventional-commits-task.yaml
@@ -27,6 +27,10 @@ spec:
       type: string
       description: Pull Request Number to left comment
       default: "false"
+    - name: LINTER_IMAGE
+      type: string
+      description: image who scanning commits
+      default: "aevea/commitsar:0.15.0"
   results:
     - name: report
       description: report of commits
@@ -36,7 +40,7 @@ spec:
       description: is passed
   steps:
     - name: conventional-commits-check
-      image: aevea/commitsar:latest
+      image: $(params.LINTER_IMAGE)
       workingDir: $(workspaces.source.path)
       script: |
         if commitsar > $(results.report.path); then
@@ -46,14 +50,14 @@ spec:
         fi
         cat $(results.report.path)
     - name: conventional-commits-prepare-report
-      image: aevea/commitsar:latest
+      image: $(params.LINTER_IMAGE)
       workingDir: $(workspaces.source.path)
       script: |
         echo "=== Building mardown"
         export COLUMNS=$(cat $(results.report.path) | grep "|" | awk -F"|" '{printf "%s | %s | %s", $2, $3, $4;} {print ""}' | grep -v -e '^[[:space:]]*$' | tail -n +2 | grep '[[:alnum:]]')
         echo -e "$(params.MARDOWN_HEADER) \n HASH | ERROR | MSG \n --|--|-- \n $COLUMNS" > $(results.mardown_report.path)
     - name: conventional-commits-comment
-      image: gcr.io/jenkinsxio/jx-cli:3.1.43
+      image: gcr.io/jenkinsxio/jx-boot:3.1.43
       workingDir: $(workspaces.source.path)
       script: |
         if [ -z "$(params.PR_NUMBER)" ]; then
@@ -64,7 +68,7 @@ spec:
             fi
         fi
     - name: conventional-commits-final
-      image: gcr.io/jenkinsxio/jx-cli:3.1.43
+      image: gcr.io/jenkinsxio/jx-boot:3.1.43
       workingDir: $(workspaces.source.path)
       script: |-
         if "$(params.FAIL)" ; then
