--- a/tasks/secrets-scan.yaml
+++ b/tasks/secrets-scan.yaml
@@ -22,9 +22,10 @@ spec:
       description: PULL_BASE_SHA
     - name: LAST_SHA
       description: last SHA
+    - name: REPORT_PATH
+      description: where report should be stored
+      default: ".report.json"
   results:
-    - name: report.json
-      description: json report
     - name: status
       description: scan status
   steps:
@@ -36,7 +37,7 @@ spec:
         git fetch
         git log --left-right --cherry-pick --pretty=format:"%H" $(params.PULL_BASE_SHA)...$(params.LAST_SHA) > commit_list.txt
 
-        if gitleaks --path="$(workspaces.source.path)" --redact --commits-file=commit_list.txt --config-path="$(params.CONFIG_FILE)" --report="$(results.report.json.path)"; then
+        if gitleaks --path="$(workspaces.source.path)" --redact --commits-file=commit_list.txt --config-path="$(params.CONFIG_FILE)" --report="$(params.REPORT_PATH)" ; then
             echo "no leaks found"
             echo "success" > $(results.status.path)
           else
@@ -49,7 +50,7 @@ spec:
       workingDir: $(workspaces.source.path)
       script: |
         if [[ "$(cat $(results.status.path))" == "failed" ]]; then
-          cat $(results.report.json.path)
+          cat $(params.REPORT_PATH)
         fi
 
     - name: comment
@@ -60,7 +61,7 @@ spec:
 
         if [[ "$(cat $(results.status.path))" == "failed" ]]; then
           if [[ -n "$(params.PR_ID)" ]]; then
-            REPORT="$(cat $(results.report.json.path))"
+            REPORT="$(cat $(params.REPORT_PATH))"
             echo -e ":spider: Some leaks have been found \n <details> \n\n \`\`\` \n $REPORT \n \`\`\` \n\n</details>" > .report
             jx gitops pr comment --comment="$(cat .report)" --pr="$(params.PR_ID)"
           fi
