--- a/tasks/sonar-task.yaml
+++ b/tasks/sonar-task.yaml
@@ -56,12 +56,15 @@ spec:
     - name: WAIT_COMPLETION
       description: wait for sonar job completion
       default: "false"
+    - name: SONAR_IMAGE
+      description: "image of sonar-scanner-cli"
+      default: "sonarsource/sonar-scanner-cli:4.5"
   results:
     - name: url
       description: Sonar analys URL
   steps:
     - name: sonar-properties-create
-      image: registry.access.redhat.com/ubi8/ubi-minimal:latest
+      image: registry.access.redhat.com/ubi8/ubi-minimal:8.3
       workingDir: $(workspaces.source.path)
       env:
         - name: SONAR_ORGANIZATION
@@ -133,7 +136,7 @@ spec:
         echo "---------------------------"
         cat $(workspaces.source.path)/sonar-project.properties
     - name: sonar-scan
-      image: sonarsource/sonar-scanner-cli
+      image: $(params.SONAR_IMAGE)
       workingDir: $(workspaces.source.path)
       script: |
         sonar-scanner -Dsonar.login=${SONAR_TOKEN} > .sonar
