--- a/pipelines/spring-gradle-pullrequest-pipeline.yaml
+++ b/pipelines/spring-gradle-pullrequest-pipeline.yaml
@@ -51,9 +51,9 @@ spec:
       name: REPO_URL
       type: string
     - name: DOCKLE_EXIT_LEVEL
-      default: "info"
+      default: "warn"
     - name: TRIVY_SEVERITY
-      default: "MEDIUM"
+      default: "HIGH"
   workspaces:
     - name: shared-data
       description: |
