--- a/pipelines/react-pullrequest-pipeline.yaml
+++ b/pipelines/react-pullrequest-pipeline.yaml
@@ -132,61 +132,25 @@ spec:
       workspaces:
         - name: source
           workspace: shared-data
-          #    - name: snyk-container-check
-          #      taskRef:
-          #        name: snyk
-          #      runAfter:
-          #        - "container-build"
-          #      params:
-          #        - name: SNYK_IMAGE
-          #          value: "snyk/snyk:docker"
-          #        - name: SNYK_COMMAND
-          #          value: "container"
-          #        - name: IMAGE
-          #          value: $(tasks.jx-setup.results.image)
-          #        - name: MONITOR_ARGS
-          #          value:
-          #            - "--project-name=$(params.REPO_OWNER)/$(params.REPO_NAME)/$(tasks.jx-setup.results.source_branch)"
-          #        - name: TEST_ARGS
-          #          value:
-          #            - "--severity-threshold=high"
-          #        - name: SNYK_SECRET
-          #          value: snyk
-          #        - name: PR_ID
-          #          value: "$(params.PULL_NUMBER)"
-          #        - name: FAIL
-          #          value: "false"
-          #
-          #      workspaces:
-          #        - name: source
-          #          workspace: shared-data
-          #
-          #    - name: snyk-dependency-check
-          #      taskRef:
-          #        name: snyk
-          #      runAfter:
-          #        - "build"
-          #      params:
-          #        - name: SNYK_IMAGE
-          #          value: "snyk/snyk:gradle-jdk11"
-          #        - name: SNYK_COMMAND
-          #          value: ""
-          #        - name: MONITOR_ARGS
-          #          value:
-          #            - "--remote-repo-url=$(params.REPO_URL)"
-          #            - "--project-name=$(params.REPO_OWNER)/$(params.REPO_NAME)/$(tasks.jx-setup.results.source_branch)"
-          #        - name: TEST_ARGS
-          #          value:
-          #            - "--severity-threshold=high"
-          #        - name: SNYK_SECRET
-          #          value: snyk
-          #        - name: PR_ID
-          #          value: "$(params.PULL_NUMBER)"
-          #        - name: FAIL
-          #          value: "false"
-          #      workspaces:
-          #        - name: source
-          #          workspace: shared-data
+
+    - name: container-check
+      taskRef:
+        name: container-scan
+      runAfter:
+        - "container-build"
+      params:
+        - name: PR_NUMBER
+          value: "$(params.PULL_NUMBER)"
+        - name: PR_NUMBER
+          value: "$(tasks.jx-setup.results.image)"
+        - name: DOCKLE_EXIT_LEVEL
+          value: "$(params.DOCKLE_EXIT_LEVEL)"
+        - name: TRIVY_SEVERITY
+          value: "$(params.TRIVY_SEVERITY)"
+      workspaces:
+        - name: source
+          workspace: shared-data
+
     - name: jx-finish
       taskRef:
         name: jx-finish-pr
