chore: add cache to gradle builds & fix image scan params

--- a/pipelines/react-pullrequest-pipeline.yaml
+++ b/pipelines/react-pullrequest-pipeline.yaml
@@ -124,7 +124,7 @@ spec:
         - name: PR_NUMBER
           value: $(params.PULL_NUMBER)
         - name: FAIL
-          value: "false"
+          value: "true"
     - name: container-build
       taskRef:
         name: kaniko
