--- a/tasks/gradle-build-task.yaml
+++ b/tasks/gradle-build-task.yaml
@@ -21,20 +21,12 @@ spec:
       default: "gradle:6.3.0-jdk11"
     - name: JAVA_OPTIONS
       default: "-Xms10m -Xmx192m"
-    - name: GRADLE_PVC
-      description: "gradle home pvc name"
-      default: "gradle-home"
     - name: ARGS
       description: gradle exctra args
       type: array
       default:
         - clean
         - build
-        - --no-daemon
-  volumes:
-    - name: gradle-home-cache
-      persistentVolumeClaim:
-        claimName: "$(params.GRADLE_PVC)"
   steps:
     - name: build
       image: $(params.IMAGE)
@@ -44,11 +36,17 @@ spec:
         - gradle
       args:
         - "$(params.ARGS[*])"
-        - "-Dgradle.user.home=/.gradle"
+        - "--no-daemon"
       env:
         - name: _JAVA_OPTIONS
           value: "$(params.JAVA_OPTIONS)"
-      volumeMounts:
-        - name: gradle-home-cache
-          mountPath: /.gradle
+        - name: ARTIFACT_REGISTRY_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: nexus
+              key: password
+        - name: ARTIFACT_REGISTRY_USER
+          value: "admin"
+        - name: ARTIFACT_REGISTRY_URL
+          value: "http://nexus/repository/maven-group/"
 
