chore: add local nexus usage for node builds

--- a/tasks/node-build-task.yaml
+++ b/tasks/node-build-task.yaml
@@ -19,7 +19,35 @@ spec:
       type: string
       description: node image
       default: "gcr.io/jenkinsxio/builder-nodejs12x:latest"
+    - name: ARTIFACT_REGISTRY_URL
+      default: "http://nexus/repository/npmjs-registry/"
+    - name: ARTIFACT_REGISTRY_USER
+      default: "admin"
+    - name: ARTIFACT_REGISTRY_PASSWORD_SECRET
+      default: "nexus"
+  stepTemplate:
+    name: ""
+    env:
+      - name: CI
+        value: "true"
   steps:
+    - name: prepare-npmrc
+      image: $(params.IMAGE)
+      workingDir: $(workspaces.source.path)
+      script: |
+        PASS="$(echo -n "${ARTIFACT_REGISTRY_USER}:${ARTIFACT_REGISTRY_PASSWORD}" | base64)"
+        echo "registry=${ARTIFACT_REGISTRY_URL}" >> .npmrc
+        echo "_auth=${PASS}" >> .npmrc
+      env:
+        - name: ARTIFACT_REGISTRY_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: "$(params.ARTIFACT_REGISTRY_PASSWORD_SECRET)"
+              key: password
+        - name: ARTIFACT_REGISTRY_USER
+          value: "$(params.ARTIFACT_REGISTRY_USER)"
+        - name: ARTIFACT_REGISTRY_URL
+          value: "$(params.ARTIFACT_REGISTRY_URL)"
     - name: install
       image: $(params.IMAGE)
       imagePullPolicy: IfNotPresent
@@ -32,10 +60,10 @@ spec:
       image: $(params.IMAGE)
       imagePullPolicy: IfNotPresent
       workingDir: $(workspaces.source.path)
-      script: |
-        export CI=true
-        export DISPLAY=:99
-        npm test
+      command:
+        - npm
+      args:
+        - test
     - name: build-prod
       image: $(params.IMAGE)
       imagePullPolicy: IfNotPresent
