--- a/packs/angular/preview/helmfile.yaml
+++ b/packs/angular/preview/helmfile.yaml
@@ -3,8 +3,8 @@ environments:
     values:
       - jx-values.yaml
 repositories:
-  - name: stable
-    url: https://charts.helm.sh/stable
+  - name: bitnami
+    url: https://charts.bitnami.com/bitnami
   - name: dev
     url: '{{ .Values | get "jxRequirements.cluster.chartRepository" " " }}'
 releases:
@@ -15,12 +15,15 @@ releases:
 #  values:
 #    - backend-values.yaml
 #    - imagePullSecrets.yaml
-#- chart: stable/mysql
-#  version: 1.6.6
+#- chart: bitnami/mysql
+#  version: 8.2.1
 #  name: mysql
 #  namespace: '{{ requiredEnv "PREVIEW_NAMESPACE" }}'
+#  wait: true
 #  values:
-#    - mysql-values.yaml
+#    - mysql-values.yaml.gotmpl
+#    - imagePullSecrets.yaml
+#    - jx-values.yaml
 - chart: '../charts/{{ requiredEnv "APP_NAME" }}'
   name: preview
   wait: true
