--- a/packs/spring-gradle/preview/helmfile.yaml
+++ b/packs/spring-gradle/preview/helmfile.yaml
@@ -3,17 +3,19 @@ environments:
     values:
     - jx-values.yaml
 repositories:
-  - name: stable
-    url: https://charts.helm.sh/stable
+  - name: bitnami
+    url: https://charts.bitnami.com/bitnami
   - name: dev
     url: '{{ .Values | get "jxRequirements.cluster.chartRepository" " " }}'
 releases:
-- chart: stable/mysql
+- chart: bitnami/mysql
+  version: 8.2.1
   name: mysql
-  version: 1.6.6
   namespace: '{{ requiredEnv "PREVIEW_NAMESPACE" }}'
+  wait: true
   values:
-    - mysql-values.yaml
+  - jx-values.yaml
+  - mysql-values.yaml.gotmpl
 - chart: '../charts/{{ requiredEnv "APP_NAME" }}'
   name: preview
   wait: true
