--- a/packs/react/preview/helmfile.yaml
+++ b/packs/react/preview/helmfile.yaml
@@ -3,24 +3,26 @@ environments:
     values:
       - jx-values.yaml
 repositories:
-  - name: stable
-    url: https://charts.helm.sh/stable
+  - name: bitnami
+    url: https://charts.bitnami.com/bitnami
   - name: dev
     url: '{{ .Values | get "jxRequirements.cluster.chartRepository" " " }}'
 releases:
-#- chart: dev/mood-feed-backend
+#- chart: dev/api-server
 #  name: mood-feed-backend
 #  wait: true
 #  namespace: '{{ requiredEnv "PREVIEW_NAMESPACE" }}'
 #  values:
 #    - backend-values.yaml
-#    - imagePullSecrets.yaml
-#- chart: stable/mysql
-#  version: 1.6.6
+#    - jx-values.yaml
+#- chart: bitnami/mysql
+#  version: 8.2.1
 #  name: mysql
 #  namespace: '{{ requiredEnv "PREVIEW_NAMESPACE" }}'
+#  wait: true
 #  values:
-#    - mysql-values.yaml
+#    - mysql-values.yaml.gotmpl
+#    - jx-values.yaml
 - chart: '../charts/{{ requiredEnv "APP_NAME" }}'
   name: preview
   wait: true
@@ -29,7 +31,6 @@ releases:
   values:
   - values.yaml.gotmpl
   - jx-values.yaml
-  - imagePullSecrets.yaml
   hooks:
   - events: ["presync"]
     showlogs: true
