--- a/packs/react/.lighthouse/jenkins-x/pullrequest.yaml
+++ b/packs/react/.lighthouse/jenkins-x/pullrequest.yaml
@@ -7,7 +7,7 @@ metadata:
     owner: vitech-team
 spec:
   pipelineRef:
-    name: jx-sonar-react-pullrequest
+    name: jx-react-pullrequest
   workspaces:
     - name: shared-data
       volumeClaimTemplate:
